--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@heroicons/vue": "^2.0.18",
         "@vueuse/core": "^10.5.0",
         "preline": "^2.0.2",
-        "vue": "^3.3.9"
+        "vue": "^3.3.9",
+        "vue-router": "^4.2.5"
     }
 }
