--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@headlessui/vue": "^1.7.16",
         "@heroicons/vue": "^2.0.18",
         "@vueuse/core": "^10.5.0",
+        "date-fns": "^2.30.0",
+        "pinia": "^2.1.7",
         "preline": "^2.0.2",
         "vue": "^3.3.9",
         "vue-router": "^4.2.5"
