--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "date-fns": "^2.30.0",
         "pinia": "^2.1.7",
         "preline": "^2.0.2",
+        "sms-segments-calculator": "^1.2.0",
         "vue": "^3.3.9",
         "vue-router": "^4.2.5"
     }
