--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@heroicons/vue": "^2.0.18",
         "@vueuse/core": "^10.5.0",
         "date-fns": "^2.30.0",
+        "fuse.js": "^7.0.0",
         "pinia": "^2.1.7",
         "preline": "^2.0.2",
         "sms-segments-calculator": "^1.2.0",
