--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
         "prettier": "^3.0.1",
         "tailwindcss": "^3.3.5",
         "typescript": "^5.1.6",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-node-polyfills": "^0.17.0"
     },
     "dependencies": {
         "@heroicons/vue": "^2.0.18",
+        "@jsx-email/doiuse-email": "^1.0.1",
         "@vueuse/core": "^10.5.0",
         "date-fns": "^2.30.0",
+        "doiuse-email": "^0.4.1",
         "fuse.js": "^7.0.0",
         "pinia": "^2.1.7",
         "preline": "^2.0.2",
