--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "illuminate/support": "^9.0 || ^10.0",
         "nesbot/carbon": "^2.71",
         "illuminate/notifications": "^9.0 || ^10.0",
+        "illuminate/console": "^9.0 || ^10.0",
         "illuminate/contracts": "^9.0 || ^10.0",
         "illuminate/routing": "^9.0 || ^10.0",
         "illuminate/view": "^9.0 || ^10.0",
