--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "jason.lewis1991@gmail.com"
         }
     ],
+    "license": "MIT",
     "require": {
         "spatie/laravel-data": "^3.0",
         "illuminate/support": "^9.0 || ^10.0",
