--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "illuminate/contracts": "^9.0 || ^10.0",
         "illuminate/routing": "^9.0 || ^10.0",
         "illuminate/view": "^9.0 || ^10.0",
-        "illuminate/filesystem": "^9.0 || ^10.0"
+        "illuminate/filesystem": "^9.0 || ^10.0",
+        "illuminate/database": "^9.0 || ^10.0"
     },
     "autoload": {
         "psr-4": {
