--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     ],
     "license": "MIT",
     "require": {
-        "spatie/laravel-data": "^3.0",
-        "laravel/framework": "^9.0 || ^10.0",
+        "spatie/laravel-data": "^4.0",
+        "laravel/framework": "^10.0|^11.0",
         "nesbot/carbon": "^2.62.1"
     },
     "autoload": {
